# lfn-chess

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: build_cmake.yml  main.yml
include/: bitboard.h  board.h  square.h  utils.h
src/: main.cc
tests/: CMakeLists.txt  bitboard_tests.cc  board_tests.cc  square_tests.cc
